--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "preLaunchTask": "build",
             // If you have changed target frameworks, make sure to update the program path.
-            "program": "${workspaceFolder}/src/Stargate.WebApiServ.Web/bin/Debug/netcoreapp3.1/Stargate.WebApiServ.Web.dll",
+            "program": "${workspaceFolder}/src/Stargate.WebApiServ.Web/bin/Debug/net5.0/Stargate.WebApiServ.Web.dll",
             "args": [],
             "cwd": "${workspaceFolder}/src/Stargate.WebApiServ.Web",
             "stopAtEntry": false,
