--- a/src/Stargate.WebApiServ.Web/Stargate.WebApiServ.Web.csproj
+++ b/src/Stargate.WebApiServ.Web/Stargate.WebApiServ.Web.csproj
@@ -9,15 +9,21 @@
     <Product>WebAPI 服务</Product>
     <Company>星门软件开发(StargateSoft Develop)</Company>
     <Authors>朱俊明(StarryLibra)</Authors>
-    <AssemblyVersion>0.1.0.1</AssemblyVersion>
-    <FileVersion>0.1.0.1</FileVersion>
-    <Version>0.1.0</Version>
+    <AssemblyVersion>0.1.1.17</AssemblyVersion>
+    <FileVersion>0.1.1.1</FileVersion>
+    <Version>0.1.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.0" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="5.0.0" NoWarn="NU1605" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.10.9" />
+    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="3.4.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+    <PackageReference Include="Serilog.Sinks.Async" Version="1.4.0" />
+    <PackageReference Include="Serilog.Sinks.Console" Version="3.1.1" />
+    <PackageReference Include="Serilog.Sinks.File" Version="4.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
   </ItemGroup>
 
