--- a/src/Stargate.WebApiServ.Web/appsettings.Development.json
+++ b/src/Stargate.WebApiServ.Web/appsettings.Development.json
@@ -1,9 +1,29 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Warning",
+        "Microsoft.Hosting.Lifetime": "Information"
+      }
+    },
+    "Enrich": [ "FromLogContext" ],
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:o} - {Level} - {SourceContext}{NewLine}{Message}{NewLine}{Exception}{NewLine}"
+        }
+      },
+      {
+        "Name": "File",
+        "Args": {
+          "outputTemplate": "{Timestamp:HH:mm:ss.fff} [{Level:u3}] {SourceContext}{NewLine}{Message}{NewLine}{Exception}",
+          "path": "logs/log.Development-.txt",
+          "rollingInterval": "Day"
+        }
+      }
+    ]
   }
 }
