添加全局异常捕获，以堵塞未处置的未明异常。

--- a/src/Stargate.WebApiServ.Web/appsettings.json
+++ b/src/Stargate.WebApiServ.Web/appsettings.json
@@ -1,5 +1,11 @@
 {
   "AllowedHosts": "*",
+  "Json": {
+    "IgnoreNullValues": true,
+    "NamingPolicy": "CamelCase",
+    "RelaxedEscaping": true,
+    "WriteIndented": false
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Async", "Serilog.Sinks.File" ],
     "MinimumLevel": {
