--- a/src/Stargate.WebApiServ.Web/appsettings.Development.json
+++ b/src/Stargate.WebApiServ.Web/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "Json": {
+    "WriteIndented": true
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
     "MinimumLevel": {
