--- a/src/Stargate.WebApiServ.Web/Properties/launchSettings.json
+++ b/src/Stargate.WebApiServ.Web/Properties/launchSettings.json
@@ -29,7 +29,7 @@
     },
     "Docker": {
       "commandName": "Docker",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true,
       "useSSL": true
