--- a/src/Stargate.WebApiServ.Web/appsettings.json
+++ b/src/Stargate.WebApiServ.Web/appsettings.json
@@ -1,6 +1,7 @@
 {
   "AllowedHosts": "*",
   "Json": {
+    "AllowNumberInQuotes": false,
     "IgnoreNullValues": true,
     "NamingPolicy": "CamelCase",
     "RelaxedEscaping": true,
