--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -4,7 +4,10 @@ services:
   stargate.webapiserv.web:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_URLS=https://+:443;http://+:80
     ports:
-      - "80"
+      - "8001:80"
+      - "44301:443"
     volumes:
       - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
