--- a/src/Stargate.WebApiServ.Web/appsettings.json
+++ b/src/Stargate.WebApiServ.Web/appsettings.json
@@ -1,5 +1,8 @@
 {
   "AllowedHosts": "*",
+  "AppSettings": {
+    "AuthServer": "https://192.168.1.149:44300"
+  },
   "Json": {
     "AllowNumberInQuotes": false,
     "IgnoreNullValues": true,
