--- a/src/Stargate.WebApiServ.Tests/Stargate.WebApiServ.Tests.csproj
+++ b/src/Stargate.WebApiServ.Tests/Stargate.WebApiServ.Tests.csproj
@@ -17,6 +17,8 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
     <PackageReference Include="coverlet.collector" Version="1.3.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.2" />
   </ItemGroup>
 
   <ItemGroup>
