支持 Accept 表头的内容协商。

--- a/src/Stargate.WebApiServ.Web/appsettings.json
+++ b/src/Stargate.WebApiServ.Web/appsettings.json
@@ -5,6 +5,7 @@
   },
   "Json": {
     "AllowNumberInQuotes": false,
+    "AllowTrailingCommas": false,
     "IgnoreNullValues": true,
     "NamingPolicy": "CamelCase",
     "RelaxedEscaping": true,
