引入 Mapster 对象映射器。

--- a/src/Stargate.WebApiServ.Web/appsettings.Development.json
+++ b/src/Stargate.WebApiServ.Web/appsettings.Development.json
@@ -2,6 +2,9 @@
   "AppSettings": {
     "AuthServer": "https://localhost:44300"
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=(LocalDB)\\v11.0;AttachDbFileName=|DataDirectory|\\WebApiServ.mdf;InitialCatalog=WebApiServ;Integrated Security=True;MultipleActiveResultSets=True"
+  },
   "Json": {
     "WriteIndented": true
   },
