--- a/src/Stargate.WebApiServ.Web/appsettings.Development.json
+++ b/src/Stargate.WebApiServ.Web/appsettings.Development.json
@@ -13,7 +13,7 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
         "Microsoft.Hosting.Lifetime": "Information"
       }
     },
