--- a/src/Stargate.WebApiServ.Web/appsettings.json
+++ b/src/Stargate.WebApiServ.Web/appsettings.json
@@ -19,7 +19,7 @@
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft": "Warning",
+        "Microsoft.AspNetCore": "Warning",
         "Microsoft.Hosting.Lifetime": "Information"
       }
     },
