--- a/src/Stargate.WebApiServ.Web/appsettings.json
+++ b/src/Stargate.WebApiServ.Web/appsettings.json
@@ -4,7 +4,7 @@
     "AuthServer": "https://192.168.1.149:44300"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=localhost;Initial Catalog=WebApiServ;Integrated Security=False;User Id=sa;Password=P@ssw0rd;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=localhost;Initial Catalog=Stargate;Integrated Security=False;User Id=sa;Password=P@ssw0rd;MultipleActiveResultSets=True"
   },
   "Json": {
     "AllowNumberInQuotes": false,
