--- a/src/Stargate.WebApiServ.Web/Stargate.WebApiServ.Web.csproj
+++ b/src/Stargate.WebApiServ.Web/Stargate.WebApiServ.Web.csproj
@@ -28,15 +28,14 @@
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.2.22" />
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.2.22" />
     <PackageReference Include="Serilog" Version="2.10.0" />
-    <PackageReference Include="Serilog.AspNetCore" Version="4.1.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="5.0.0" />
     <PackageReference Include="Serilog.Settings.Configuration" Version="3.3.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
     <PackageReference Include="Serilog.Sinks.File" Version="5.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
     <PackageReference Include="Swashbuckle.AspNetCore.Filters" Version="7.0.2" />
-    <PackageReference Include="WebApiContrib.Core" Version="2.2.1" />
-    <PackageReference Include="WebApiContrib.Core.Formatter.Yaml" Version="2.1.0" />
+    <PackageReference Include="YamlDotNet" Version="11.2.1" />
     <ProjectReference Include="..\Stargate.WebApiServ.Data\Stargate.WebApiServ.Data.csproj" />
   </ItemGroup>
 
