升级整理一下 Nuget 库。

--- a/src/Stargate.WebApiServ.Web/appsettings.Development.json
+++ b/src/Stargate.WebApiServ.Web/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+
   "AppSettings": {
     "AuthServer": "https://localhost:44300"
   },
